--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="emmaelley.github.io/ProjectMap.html"> Map Project </a>
+<a href="https://emmaelley.github.io/ProjectMap.html"> Map Project </a>
 </body>
 </html>
