--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <a href="ProjectMap.html"> Map Project </a>
+<a href="CapstoneProject.ipynb.html"> Project Code </a>
 </body>
 </html>
