--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>I'm hosted with GitHub Pages.</p>
 <a href="ProjectMap.html"> Map Project </a>
 <p>
-<a href="CapstoneProject.html"> Project Code </a>
+<a href="CapstoneProject.html"> Project Notebook </a>
 </p>
 </body>
 </html>
