--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Emma Elley</h1>
+  <p>Welcome to my portfolio site, which I am currently working on. </p>
+  <h2>About Me</h2>  
+<p> I am currently studying for a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
+<p> I recently completed the IBM Data Science Professional Certificate on Coursera and am looking to develop my skills in data science further via projects and further online study using datacamp. </p>
+  
+  <h2>Portfolio</h2>
+  <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. <\p>
 <a href="ProjectMap.html"> Map Project </a>
 <p>
 <a href="CapstoneProject.html"> Project Notebook </a>
