--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <h2>About Me</h2>  
 <p> I am currently studying for a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
 <p> I recently completed the IBM Data Science Professional Certificate on Coursera and am looking to develop my skills in data science further via projects and further online study using datacamp. </p>
+  <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p>
   
   <h2>Portfolio</h2>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. <\p>
