--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <p> I recently completed the IBM Data Science Professional Certificate on Coursera and am looking to develop my skills in data science further via projects and further online study using datacamp. </p>
   <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p>
   
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="emma-elley-6a810213a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/emma-elley-6a810213a?trk=profile-badge">Emma Elley</a></div>
+  
   <h2>Portfolio</h2>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. <\p>
 <a href="ProjectMap.html"> Map Project </a>
