--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <h2>Portfolio</h2>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. <\p>
-<a href="ProjectMap.html"> Map Project </a>
-<p><a href="CapstoneProject.html"> Project Notebook </a>
+    <a href="ProjectMap.html"> Map Project </a></p>
+  <p><a href="CapstoneProject.html"> Project Notebook </a></p>
 </body>
 </html>
