--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>My HTML Document</title>
+    <style>
+        body { background-color: YellowGreen; }
+        p { color: #fff; }
+    </style>
+</head>
 <body>
 <h1>Emma Elley</h1>
   <p>Welcome to my portfolio site, which I am currently working on. </p>
