--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>My HTML Document</title>
     <style>
-        body { background-color: PaleTurquoise; }
+        body { background-color: AliceBlue; }
         p { color: #fff; }
     </style>
 </head>
