--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My HTML Document</title>
 <style>
-body { background-color: AliceBlue; }
-p { color: #fff; }
+body {
+  background-color: AliceBlue;
+}
+
+h1 {
+  color: maroon;
+  margin-left: 40px;
+} 
 </style>
 </head>
 <body>
