--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h1 {
 } 
 </style>
 </head>
-<body style="background-color:powderblue;">
+<body>
 <h1>Emma Elley</h1>
   <p>Welcome to my portfolio site, which I am currently working on. </p>
   <h2>About Me</h2>  
