--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-  background-color: Azure;
-}
-
-h1 {
-  color: maroon;
-  margin-left: 40px;
-} 
-</style>
-</head>
+	<head>
+		<title>Emma Elley</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
 <body>
 <h1>Emma Elley</h1>
   <p>Welcome to my portfolio site, which I am currently working on. </p>
