--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Emma Elley</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/main.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 <body>
 <h1>Emma Elley</h1>
