--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <h2>About Me</h2>  
 <p> I am currently studying for a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
 <p> I recently completed the IBM Data Science Professional Certificate on Coursera and am looking to develop my skills in data science further via projects and further online study using datacamp. </p>
-  <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p>
-  
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="emma-elley-6a810213a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/emma-elley-6a810213a?trk=profile-badge">Emma Elley</a></div>
-  
+  <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p> 
   <h2>Portfolio</h2>
-  <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. <\p>
-  <p><a href="ProjectMap.html"> Map Project </a></p>
+  <h3>IBM Data Science Professional Certificate Capstone Project</h3>
+  <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. 
+  <p>You can view the end product of this project by clicking on the map link below. This map shows the clusters my project sorted the natural neighbourhoods in Ednburgh into, based on the types of food venue that are present there.</p>
+    <p><a href="ProjectMap.html"> Map </a></p>
+  <p>The notebook with code used for the project can be viewed here:</p>
   <p><a href="CapstoneProject.html"> Project Notebook </a></p>
+  <p>During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data. I sorted points into non-uniform shapes and thought about how to find all of the venues in each area. I plan to further the value of this project by refining the model using data about the price of the venues as well as popularity.</p>
 </body>
 </html>
