--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. 
   <p>You can view the end product of this project by clicking on the map link below. This map shows the clusters my project sorted the natural neighbourhoods in Ednburgh into, based on the types of food venue that are present there.</p>
     <p><a href="ProjectMap.html"> Map </a></p>
+    <iframe src="ProjectMap.html" title="Map" height = 400 width =600>
+    </iframe>
   <p>The notebook with code used for the project can be viewed here:</p>
   <p><a href="CapstoneProject.html"> Project Notebook </a></p>
   <p>During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data. I sorted points into non-uniform shapes and thought about how to find all of the venues in each area. I plan to further the value of this project by refining the model using data about the price of the venues as well as popularity.</p>
