--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
   <p>The notebook with code used for the project can be viewed here:</p>
   <p><a href="CapstoneProject.html"> Project Notebook </a></p>
   <p>During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data. I sorted points into non-uniform shapes and thought about how to find all of the venues in each area. I plan to further the value of this project by refining the model using data about the price of the venues as well as popularity.</p>
+
+	<h3>Office Episodes exploratory data analysis project</h3>
+	<p>This project was completed as an unguided project on datacamp to exemplify my ability to perform exploratory data analysis using python and matplotlib.</p>
+	<iframe src="office_episodes/notebook.ipynb" title="Office Episodes Notebook" height = 400 width = 600>
+	</iframe>
+	
 </body>
 </html>
