--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 	<h3>Office Episodes exploratory data analysis project</h3>
 	<p>This project was completed as an unguided project on datacamp to exemplify my ability to perform exploratory data analysis using python and matplotlib.</p>
-	<iframe src="office_episodes/notebook.ipynb" title="Office Episodes Notebook" height = 400 width = 600>
-	</iframe>
+	<p><a href="office_episodes/notebook.ipynb"> Notebook </a></p>
 	
 </body>
 </html>
