--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <h1>Emma Elley</h1>
   <p>Welcome to my portfolio site. </p>
   <h2>About Me</h2>  
-<p> I am currently studying for a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
-<p> I recently completed the IBM Data Science Professional Certificate on Coursera and am looking to develop my skills in data science further via projects and further online study using datacamp. </p>
+<p> I have recently graduated from a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
   <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p> 
   <h2>Portfolio</h2>
   <h3>IBM Data Science Professional Certificate Capstone Project</h3>
