--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 <body>
-<div>
+<div class="div-1">
 <h1>Emma Elley</h1>
   <p>Welcome to my portfolio site. </p>
   <h2>About Me</h2>  
 <p> I have recently graduated from a Master's degree in Particles, Strings and Cosmology at Durham University. </p>
   <p> My <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> Linkedin profile </a></p> 
-<div>
+<div class="div-2">
   <h2>Portfolio</h2>
   <h3>IBM Data Science Professional Certificate Capstone Project</h3>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. The project used k-means clustering using scikit-learn to cluster the neighbourhoods.  During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data. I sorted points into non-uniform shapes and thought about how to find all of the venues in each area. 
