--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <h3>IBM Data Science Professional Certificate Capstone Project</h3>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. The project used k-means clustering using scikit-learn to cluster the neighbourhoods.  During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data. I sorted points into non-uniform shapes and thought about how to find all of the venues in each area. 
   <p>This map is the final product of the project and summarises the groups that natural neighbourhoods were sorted into, with each colour representing a different group. By clicking on the coloured dot within a neighbourhood, you can see the top 3 types of food venue in that neighbourhood.</p>
-    <iframe src="ProjectMap.html" title="Map" height = 400 width =600 style="border:none">
+    <iframe src="clusterMap.html" title="Map" height = 400 width =600 style="border:none">
 	</iframe>
-    <p><a href="ProjectMap.html"> Full sized map </a></p>
+    <p><a href="clusterMap.html"> Full sized map </a></p>
   <p>The notebook with code used for the project can be viewed here:</p>
-  <p><a href="CapstoneProject.html"> Project Notebook </a></p>
+  <p><a href="PublicVersionEdinburghFood.html"> Project Notebook </a></p>
 
 	<h3>Office Episodes exploratory data analysis project</h3>
 	<p>This project was completed as an unguided project on datacamp to exemplify my ability to perform exploratory data analysis using python and matplotlib.</p>
