--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Emma Elley</h1>
     <h2>About Me</h2>  
     <p> I have recently graduated from a Master's degree in Particles, Strings and Cosmology at Durham University. I completed my undergraduate degreee in Theoretical Physics at the University of Edinburgh. I am looking to start a career in data science.</p>
-    <p> You can find my Linkedin profile <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> here </a></p>.
+    <p> You can find my Linkedin profile <a href="https://www.linkedin.com/in/emma-elley-6a810213a/"> here </a>.</p>
   <h2>Portfolio</h2>
   <h3>IBM Data Science Professional Certificate Capstone Project</h3>
   <p> My capstone project for the IBM Data Science Professional Certificate focused on grouping natural neighbourhoods in Edinburgh based on the current population of food venues using data from the Foursquare Places API and from <a href="https://data.edinburghcouncilmaps.info/datasets/9961be54aa5649aebfb5f2cde53fa432_27/explore.">Edinburgh Council</a>. The project used k-means clustering using scikit-learn to cluster the neighbourhoods. During this project I learned to use folium, the Foursquare Places API and geodataframes to analyse geographical data and learned to sort points into non-uniform shapes. Since finishing the course I have improved the model and added a chloropleth map based on the average price of each area. 
